Update all agents: domain knowledge polish based on Oparin n=600 research
111 agents polished: process instructions replaced with domain knowledge.